--- a/licence_checker.yml
+++ b/licence_checker.yml
@@ -16,27 +16,33 @@
 # under the License.
 
 allowed-licenses:
+  - 0BSD
   - AFL-3.0
   - Apache-1.1
   - Apache-2.0
+  - APAFML
   - BlueOak-1.0.0
   - BSD-2-Clause
-  - BSD-3-Clause-LBNL
   - BSD-3-Clause
+  - BSD-3-Clause-LBNL
   - BSL-1.0
+  - CC-PDDC
+  - CC0-1.0
   - EPICS
   - HPND
   - ICU
   - ISC
   - MIT
+  - MIT-0
   - MS-PL
   - MulanPSL-2.0
   - NCSA
+  - OGL-UK-3.0
   - PHP-3.01
   - PostgreSQL
   - PSF-2.0
-  - StandardML-NJ
-  - Unicode-DFS-2015
+  - Python-2.0
+  - SMLNJ
   - Unicode-DFS-2016
   - Unlicense
   - UPL-1.0
@@ -44,10 +50,9 @@ allowed-licenses:
   - WTFPL
   - X11
   - Xnet
-  - zlib-acknowledgement
+  - Zlib
   - ZPL-2.0
 
 ignored-packages:
-  - spdx-exceptions@2.3.0
-  - spdx-license-ids@3.0.16
+  - spdx-exceptions@2.5.0
   - spdx-ranges@2.1.1
